fix: マイページのレイアウト調整を行った
Message body
・コンテンツページの作成を行う予定

Message footer

--- a/css/myPage.css
+++ b/css/myPage.css
@@ -76,6 +76,7 @@ body .contents {
   text-align: center;
 }
 body .contents .eventItems {
+  border-radius: 160px;
   display: flex;
   width: 80vw;
   overflow: scroll;
