--- a/css/myPage.scss
+++ b/css/myPage.scss
@@ -72,6 +72,7 @@ body {
     margin: 16px auto 0;
     text-align: center;
     .eventItems {
+      border-radius: 160px;
       display: flex;
       width: 80vw;
       overflow: scroll;
