fix: 細かなレイアウトの調整を行った
Message body
・全体的にコンテンツを追加する

Message footer

--- a/css/main.scss
+++ b/css/main.scss
@@ -188,7 +188,7 @@ body {
   margin: 0 auto;
   position: relative;
   top: 62px;
-  box-sizing: content-box;
+  overflow-x: hidden;
   main {
     .slideShow {
       .wrapper {
