--- a/css/main.css
+++ b/css/main.css
@@ -159,7 +159,7 @@ body {
   margin: 0 auto;
   position: relative;
   top: 62px;
-  box-sizing: content-box;
+  overflow-x: hidden;
 }
 body main .slideShow .wrapper {
   max-width: 100vw;
