fix: 細かなレイアウトの調整を行った
Message body
・全体的にコンテンツを追加する

Message footer

--- a/css/myPage.css
+++ b/css/myPage.css
@@ -10,6 +10,7 @@ body {
   position: relative;
   top: 70px;
   margin: 0 auto;
+  overflow-x: hidden;
 }
 body .myPage_mainItem {
   margin: 0 auto;
