--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,6 @@
   padding: 0;
   font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, "MS Pゴシック", sans-serif;
 }
-
 *::-webkit-scrollbar {
   display: none;
 }
@@ -279,45 +278,7 @@ body main .search .search_header ul li {
   list-style: none;
   padding: 16px 24px;
 }
-body main .search .search_bar {
-  text-align: center;
-  padding: 48px 0;
-}
-body main .search .search_bar .search_container {
-  box-sizing: border-box;
-}
-body main .search .search_bar .search_container input,
-body main .search .search_bar .search_container button {
-  border: 2px solid #222;
-  outline: 0;
-  font-size: 16px;
-  vertical-align: middle;
-}
-body main .search .search_bar .search_container input {
-  width: 50%;
-  max-width: 320px;
-  background: #eee;
-  border-right: none;
-  border-radius: 32px 0 0 32px;
-  padding: 12px 24px;
-}
-body main .search .search_bar .search_container button {
-  border-left: none;
-  border-radius: 0 32px 32px 0;
-  color: #000;
-  background: #eee;
-  margin-left: -6px;
-  padding: 6px 24px;
-  transition: all 0.3s;
-  font-size: 24px;
-}
-body main .search .search_bar .search_container button:hover {
-  cursor: pointer;
-}
-body main .search .search_bar .search_container button:hover i {
-  transform: ro;
-}
-body main .search .search_bar .letszootie {
+body main .search .letszootie {
   margin: 24px 0 -24px;
   font-size: 24px;
   font-family: Chalkduster;
@@ -494,6 +455,46 @@ body .title p:nth-child(3) {
   margin: 8px auto;
   border: 1px solid #000;
   border-radius: 16px;
+}
+
+.search_bar {
+  text-align: center;
+  padding: 48px 0;
+  font-size: 16px;
+}
+.search_bar .search_container {
+  box-sizing: border-box;
+}
+.search_bar .search_container input,
+.search_bar .search_container button {
+  border: 2px solid #222;
+  outline: 0;
+  font-size: 16px;
+  vertical-align: middle;
+}
+.search_bar .search_container input {
+  width: 50%;
+  max-width: 320px;
+  background: #eee;
+  border-right: none;
+  border-radius: 32px 0 0 32px;
+  padding: 12px 24px;
+}
+.search_bar .search_container button {
+  border-left: none;
+  border-radius: 0 32px 32px 0;
+  color: #000;
+  background: #eee;
+  margin-left: -6px;
+  padding: 6px 24px;
+  transition: all 0.3s;
+  font-size: 24px;
+}
+.search_bar .search_container button:hover {
+  cursor: pointer;
+}
+.search_bar .search_container button:hover i {
+  transform: ro;
 }
 
 footer {
