--- a/css/main.css
+++ b/css/main.css
@@ -130,7 +130,7 @@ header .first_header .hamburger_box nav.globalMenuSp ul li p {
 header .first_header .hamburger_box nav.globalMenuSp ul li a {
   display: block;
   color: #000;
-  padding: 1em 0;
+  padding: 16px 0;
   margin: 8px 0;
   text-align: right;
   text-decoration: none;
@@ -142,6 +142,34 @@ header .first_header .hamburger_box nav.globalMenuSp ul li a:hover {
 }
 header .first_header .hamburger_box nav.globalMenuSp ul .listItem {
   margin-top: 24px;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .accordionMenu .border {
+  border: dashed 1px lightgray;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .accordion_title {
+  cursor: pointer;
+  display: block;
+  font-size: 18px;
+  position: relative;
+  text-align: center;
+  transition: all 0.4s;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .accordion_title:before {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  font-family: "Font Awesome 5 Free";
+  content: "\f067";
+  font-size: 24px;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .open:before {
+  transform: rotate(45deg);
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .accordion_inner {
+  margin: 0 auto 24px;
+  display: none;
+  font-weight: bold;
+  box-sizing: border-box;
 }
 header .first_header .hamburger_box nav.globalMenuSp.active {
   transform: translateX(0%);
@@ -158,7 +186,7 @@ body {
   margin: 0 auto;
   position: relative;
   top: 62px;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 body main .slideShow .wrapper {
   max-width: 100vw;
