--- a/css/main.scss
+++ b/css/main.scss
@@ -152,7 +152,7 @@ header {
               a {
                 display: block;
                 color: #000;
-                padding: 1em 0;
+                padding: 16px 0;
                 margin: 8px 0;
                 text-align: right;
                 text-decoration :none;
@@ -165,6 +165,40 @@ header {
             }
             .listItem {
               margin-top: 24px;
+            }
+            .accordionMenu {
+              .border {
+                border: dashed 1px lightgray;
+              }
+            }
+            
+            .accordion_title {
+              cursor: pointer;
+              display: block;
+              font-size: 18px;
+              position: relative;
+              text-align: center; 
+              transition: all .4s;
+              &:before {
+                position: absolute;
+                top: 8px;
+                right: 8px;
+                font-family: "Font Awesome 5 Free";
+                content: '\f067';
+                font-size: 24px;
+              }
+            }
+            .open {
+              &:before {
+                transform: rotate(45deg);
+              }
+            }
+            
+            .accordion_inner {
+              margin: 0 auto 24px;
+              display: none;
+              font-weight: bold;
+              box-sizing: border-box;
             }
           }
           &.active {
@@ -187,7 +221,7 @@ body {
   margin: 0 auto;
   position: relative;
   top: 62px;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   main {
     .slideShow {
       .wrapper {
