--- a/css/main.scss
+++ b/css/main.scss
@@ -190,6 +190,7 @@ header {
             }
             .open {
               &:before {
+                color: #E4405F;
                 transform: rotate(45deg);
               }
             }
