--- a/css/main.css
+++ b/css/main.css
@@ -469,8 +469,69 @@ body .contents .contentsItem {
   min-height: 160px;
   padding-top: 16px;
 }
+body .contents .contentsItem .title {
+  padding-bottom: 24px;
+}
 body .contents .newItem {
   background: #bd979f;
+}
+body .contents .newItem .newItem_container {
+  width: 70%;
+  margin: 0 auto;
+  padding-bottom: 32px;
+}
+body .contents .newItem .newItem_container .newItems {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
+body .contents .newItem .newItem_container .newItems .itemSet {
+  width: 50%;
+  max-width: 480px;
+  border: 2px solid #bbb;
+  border-radius: 8px;
+  text-align: left;
+  margin: 8px;
+  justify-content: center;
+}
+body .contents .newItem .newItem_container .newItems .itemSet img {
+  width: 100%;
+  height: auto;
+  border-radius: 4px 4px 0 0;
+}
+body .contents .newItem .newItem_container .newItems .itemSet .discribe {
+  padding: 8px;
+}
+body .contents .newItem .newItem_container .newItems .itemSet .discribe .date {
+  font-size: 12px;
+  color: #333;
+}
+body .contents .newItem .newItem_container .newItems .itemSet .discribe .itemName {
+  overflow-wrap: wrap;
+  font-size: 14px;
+}
+body .contents .newItem .newItem_container .newItems .itemSet .discribe .price {
+  text-align: right;
+  font-size: 24px;
+  font-weight: bold;
+  padding-top: 8px;
+}
+body .contents .newItem .newItem_container .newItems .itemSet .discribe .price::after {
+  font-size: 16px;
+  content: " 円";
+}
+body .contents .more {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  background: #555;
+  margin: 16px auto 0;
+  padding: 16px;
+  border-radius: 8px;
+}
+body .contents .more a {
+  text-decoration: none;
+  color: #eee;
 }
 body .title {
   color: #555;
