--- a/css/main.scss
+++ b/css/main.scss
@@ -499,9 +499,68 @@ body {
     .contentsItem {
       min-height: 160px;
       padding-top: 16px;
+      .title {
+        padding-bottom: 24px;
+      }
     }
     .newItem {
       background: #bd979f;
+      .newItem_container {
+        width: 70%;
+        margin: 0 auto;
+        padding-bottom: 32px;
+        .newItems {
+          display: flex;
+          text-align: center;
+          justify-content: center;
+          .itemSet {
+            width: 50%;
+            max-width: 480px;
+            border: 2px solid #bbb;
+            border-radius: 8px;
+            text-align: left;
+            margin: 8px;
+            justify-content: center;
+            img {
+              width: 100%;
+              height: auto;
+              border-radius: 4px 4px 0 0;
+            }
+            .discribe {
+              padding: 8px;
+              .date {
+                font-size: 12px;
+                color: #333;
+              }
+              .itemName {
+                overflow-wrap: wrap;
+                font-size: 14px;
+              }
+              .price {
+                text-align: right;
+                font-size: 24px;
+                font-weight: bold;
+                padding-top: 8px;
+                &::after {
+                  font-size: 16px;
+                  content: ' 円';
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+    .more {
+      width: fit-content;
+      background: #555;
+      margin: 16px auto 0;
+      padding: 16px;
+      border-radius: 8px;
+      a {
+        text-decoration: none;
+        color: #eee;
+      }
     }
   }
   .title {
