--- a/css/myPage.scss
+++ b/css/myPage.scss
@@ -78,6 +78,8 @@ body {
       width: 360px;
       border-radius: 160px;
       overflow: scroll;
+      box-shadow: inset 6px 3px 10px rgba(0, 0, 0, 0.4);
+      z-index: 999;
       img {
         width: 200px;
         height: 200px;
@@ -85,9 +87,9 @@ body {
         border-radius: 50%;
         transition: all 0.4s;
         object-fit: contain;
+        z-index: -999;
         &:hover {
           opacity: 0.8;
-          transform: rotateY(360deg);
         }
       }
     }
