fix: 完成に向けた細かなレイアウトの調整を行った
Message body
・完成に向けて細かい調整を行っていく予定

Message footer

--- a/css/myPage.css
+++ b/css/myPage.css
@@ -100,7 +100,7 @@ body .contents .eventItems img:hover {
 }
 body .sns {
   display: flex;
-  margin: 32px auto;
+  margin: 0 auto 32px;
 }
 body .sns .snsItem {
   margin: 0 16px;
