--- a/css/myPage.scss
+++ b/css/myPage.scss
@@ -96,7 +96,7 @@ body {
   }
   .sns {
     display: flex;
-    margin: 32px auto;
+    margin: 0 auto 32px;
     .snsItem {
       margin: 0 16px;
       font-size: 32px;
