--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,9 @@
 *::-webkit-scrollbar {
   display: none;
 }
+* a {
+  text-decoration: none;
+}
 
 header .first_header {
   display: flex;
@@ -146,7 +149,7 @@ header .first_header .hamburger_box nav.globalMenuSp ul .listItem {
 header .first_header .hamburger_box nav.globalMenuSp ul .accordionMenu .border {
   border: dashed 1px lightgray;
 }
-header .first_header .hamburger_box nav.globalMenuSp ul .accordion_title {
+header .first_header .hamburger_box nav.globalMenuSp ul .accordionMenu .accordion_title {
   cursor: pointer;
   display: block;
   font-size: 18px;
@@ -155,7 +158,7 @@ header .first_header .hamburger_box nav.globalMenuSp ul .accordion_title {
   transition: all 0.4s;
   color: #555;
 }
-header .first_header .hamburger_box nav.globalMenuSp ul .accordion_title:before {
+header .first_header .hamburger_box nav.globalMenuSp ul .accordionMenu .accordion_title:before {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -164,15 +167,73 @@ header .first_header .hamburger_box nav.globalMenuSp ul .accordion_title:before 
   font-size: 24px;
   color: #000;
 }
-header .first_header .hamburger_box nav.globalMenuSp ul .open:before {
-  color: #E4405F;
-  transform: rotate(45deg);
-}
-header .first_header .hamburger_box nav.globalMenuSp ul .accordion_inner {
+header .first_header .hamburger_box nav.globalMenuSp ul .accordionMenu .accordion_inner {
   margin: 0 auto 24px;
   display: none;
   font-weight: bold;
   box-sizing: border-box;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .accordionMenu .open:before {
+  color: #E4405F;
+  transform: rotate(45deg);
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .styleSearch {
+  display: flex;
+  width: 100%;
+  margin: 80px auto 0;
+  justify-content: center;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .styleSearch .searchItem {
+  margin: 0 16px;
+  text-align: center;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .styleSearch .searchItem .icon {
+  display: block;
+  font-size: 40px;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .styleSearch .searchItem .icon a {
+  width: 40px;
+  height: 40px;
+  color: #fff;
+  background: #000;
+  padding: 32px;
+  margin-bottom: 16px;
+  border-radius: 50%;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .styleSearch .searchItem .name {
+  height: 40px;
+  padding: 32px 0 0;
+  font-family: "Hiragino Maru Gothic Pro";
+  font-size: 12px;
+  vertical-align: middle;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .news {
+  margin: 56px auto;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .news .information {
+  max-width: 480px;
+  text-align: center;
+  margin: 0 auto;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .news .information .infoItem {
+  margin: 0 16px 16px;
+  padding: 16px;
+  border-radius: 8px;
+  border: 1px dashed #7fbfff;
+  color: #4473a5;
+  -moz-text-align-last: left;
+       text-align-last: left;
+  background: #cfe1fb;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .news .information .infoItem a {
+  text-decoration: none;
+  color: #4473a5;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .news .information .infoItem .date {
+  font-size: 8px;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .news .information .infoItem .text {
+  font-size: 12px;
 }
 header .first_header .hamburger_box nav.globalMenuSp.active {
   transform: translateX(0%);
@@ -297,41 +358,33 @@ body main .slideShow .wrapper #list1 {
 body main .search .search_header {
   position: relative;
   background: #eee;
-  color: #555;
-  font-size: 16px;
 }
 body main .search .search_header ul {
   display: flex;
   justify-content: center;
   align-items: center;
+  color: #555;
 }
 body main .search .search_header ul li {
   list-style: none;
   padding: 16px 24px;
+}
+body main .search .search_header ul li a {
+  color: #555;
+  font-size: 16px;
+}
+body main .search .search_header ul li:hover {
+  color: #fff;
+  background: #222;
+}
+body main .search .search_header ul li:hover a {
+  color: #fff;
 }
 body main .search .letszootie {
   margin: 24px 0 -24px;
   font-size: 24px;
   font-family: Chalkduster;
   transform: rotate(-4deg);
-}
-body main .information {
-  margin: 56px auto;
-  max-width: 6480px;
-}
-body main .information .infoItem {
-  margin: 16px;
-  padding: 16px;
-  border-radius: 8px;
-  border: 1px solid #7fbfff;
-  color: #4473a5;
-  background: #cfe1fb;
-}
-body main .information .infoItem .date {
-  font-size: 8px;
-}
-body main .information .infoItem .text {
-  font-size: 12px;
 }
 body main .styling {
   max-width: 100vw;
