--- a/css/main.scss
+++ b/css/main.scss
@@ -12,6 +12,9 @@
   &::-webkit-scrollbar {
     display: none;
   }
+  a {
+    text-decoration: none;
+  }
 }
 
 header {
@@ -170,38 +173,93 @@ header {
               .border {
                 border: dashed 1px lightgray;
               }
-            }
-            
-            .accordion_title {
-              cursor: pointer;
-              display: block;
-              font-size: 18px;
-              position: relative;
-              text-align: center; 
-              transition: all .4s;
-              color: #555;
-              &:before {
-                position: absolute;
-                top: 8px;
-                right: 8px;
-                font-family: "Font Awesome 5 Free";
-                content: '\f067';
-                font-size: 24px;
-                color: #000;
+              .accordion_title {
+                cursor: pointer;
+                display: block;
+                font-size: 18px;
+                position: relative;
+                text-align: center; 
+                transition: all .4s;
+                color: #555;
+                &:before {
+                  position: absolute;
+                  top: 8px;
+                  right: 8px;
+                  font-family: "Font Awesome 5 Free";
+                  content: '\f067';
+                  font-size: 24px;
+                  color: #000;
+                }
+              }
+              .accordion_inner {
+                margin: 0 auto 24px;
+                display: none;
+                font-weight: bold;
+                box-sizing: border-box;
+              }
+              .open {
+                &:before {
+                  color: #E4405F;
+                  transform: rotate(45deg);
+                }
               }
             }
-            .open {
-              &:before {
-                color: #E4405F;
-                transform: rotate(45deg);
+            .styleSearch {
+              display: flex;
+              width: 100%;
+              margin: 80px auto 0;
+              justify-content: center;
+              .searchItem {
+                margin: 0 16px;
+                text-align: center;
+                .icon {
+                  display: block;
+                  font-size: 40px;
+                  a {
+                    width: 40px;
+                    height: 40px;
+                    color: #fff;
+                    background: #000;
+                    padding: 32px;
+                    margin-bottom: 16px;
+                    border-radius: 50%;
+                  }
+                }
+                .name {
+                  height: 40px;
+                  padding: 32px 0 0;
+                  font-family: "Hiragino Maru Gothic Pro";
+                  font-size: 12px;
+                  vertical-align: middle;
+                }
               }
             }
-            
-            .accordion_inner {
-              margin: 0 auto 24px;
-              display: none;
-              font-weight: bold;
-              box-sizing: border-box;
+            .news {
+              margin: 56px auto;
+              .information {
+                max-width: 480px;
+                text-align: center;
+                margin: 0 auto;
+                .infoItem {
+                  margin: 0 16px 16px;
+                  padding: 16px;
+                  border-radius: 8px;
+                  border: 1px dashed #7fbfff;
+                  color: #4473a5;
+                  text-align-last: left;
+                  background: #cfe1fb;
+                  a {
+                    text-decoration: none;
+                    color: #4473a5;
+                  }
+                  .date {
+                    font-size: 8px;
+                  }
+                  .text {
+                    font-size: 12px;
+                  }
+                }
+              }
             }
           }
           &.active {
@@ -325,15 +383,25 @@ body {
       .search_header {
         position: relative;
         background: #eee;
-        color: #555;
-        font-size: 16px;
         ul {
           display: flex;
           justify-content: center;
           align-items: center;
+          color: #555;
           li {
             list-style: none;
             padding: 16px 24px;
+            a {
+              color: #555;
+              font-size: 16px;
+            }
+            &:hover {
+              color: #fff;
+              background: #222;
+              a {
+                color: #fff;
+              }
+            }
           }
         }
       }
@@ -342,24 +410,6 @@ body {
         font-size: 24px;
         font-family: Chalkduster;
         transform: rotate(-4deg);
-      }
-    }
-    .information {
-      margin: 56px auto;
-      max-width: 6480px;
-      .infoItem {
-        margin: 16px;
-        padding: 16px;
-        border-radius: 8px;
-        border: 1px solid #7fbfff;
-        color: #4473a5;
-        background: #cfe1fb;
-        .date {
-          font-size: 8px;
-        }
-        .text {
-          font-size: 12px;
-        }
       }
     }
     .styling {
