--- a/css/main.css
+++ b/css/main.css
@@ -146,6 +146,70 @@ header .first_header .hamburger_box nav.globalMenuSp ul li a:hover {
 header .first_header .hamburger_box nav.globalMenuSp ul .listItem {
   margin-top: 24px;
 }
+header .first_header .hamburger_box nav.globalMenuSp ul .listItem .worry {
+  margin-bottom: -64px;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .listItem .worry img {
+  width: 100vw;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .listItem .styleSearch {
+  display: flex;
+  width: 100%;
+  margin: 80px auto 0;
+  justify-content: center;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .listItem .styleSearch .searchItem {
+  margin: 0 16px;
+  text-align: center;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .listItem .styleSearch .searchItem .icon {
+  display: block;
+  font-size: 40px;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .listItem .styleSearch .searchItem .icon a {
+  width: 40px;
+  height: 40px;
+  color: #fff;
+  background: #000;
+  padding: 32px;
+  margin-bottom: 16px;
+  border-radius: 50%;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .listItem .styleSearch .searchItem .name {
+  height: 40px;
+  padding: 32px 0 0;
+  font-family: "Hiragino Maru Gothic Pro";
+  font-size: 12px;
+  vertical-align: middle;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .listItem .news {
+  margin: 56px auto;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .listItem .news .information {
+  max-width: 480px;
+  text-align: center;
+  margin: 0 auto;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .listItem .news .information .infoItem {
+  margin: 0 16px 16px;
+  padding: 16px;
+  border-radius: 8px;
+  border: 2px dashed #7fbfff;
+  color: #4473a5;
+  -moz-text-align-last: left;
+       text-align-last: left;
+  background: #cfe1fb;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .listItem .news .information .infoItem a {
+  text-decoration: none;
+  color: #4473a5;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .listItem .news .information .infoItem .date {
+  font-size: 8px;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .listItem .news .information .infoItem .text {
+  font-size: 12px;
+}
 header .first_header .hamburger_box nav.globalMenuSp ul .accordionMenu .border {
   border: dashed 1px lightgray;
 }
@@ -176,64 +240,6 @@ header .first_header .hamburger_box nav.globalMenuSp ul .accordionMenu .accordio
 header .first_header .hamburger_box nav.globalMenuSp ul .accordionMenu .open:before {
   color: #E4405F;
   transform: rotate(45deg);
-}
-header .first_header .hamburger_box nav.globalMenuSp ul .styleSearch {
-  display: flex;
-  width: 100%;
-  margin: 80px auto 0;
-  justify-content: center;
-}
-header .first_header .hamburger_box nav.globalMenuSp ul .styleSearch .searchItem {
-  margin: 0 16px;
-  text-align: center;
-}
-header .first_header .hamburger_box nav.globalMenuSp ul .styleSearch .searchItem .icon {
-  display: block;
-  font-size: 40px;
-}
-header .first_header .hamburger_box nav.globalMenuSp ul .styleSearch .searchItem .icon a {
-  width: 40px;
-  height: 40px;
-  color: #fff;
-  background: #000;
-  padding: 32px;
-  margin-bottom: 16px;
-  border-radius: 50%;
-}
-header .first_header .hamburger_box nav.globalMenuSp ul .styleSearch .searchItem .name {
-  height: 40px;
-  padding: 32px 0 0;
-  font-family: "Hiragino Maru Gothic Pro";
-  font-size: 12px;
-  vertical-align: middle;
-}
-header .first_header .hamburger_box nav.globalMenuSp ul .news {
-  margin: 56px auto;
-}
-header .first_header .hamburger_box nav.globalMenuSp ul .news .information {
-  max-width: 480px;
-  text-align: center;
-  margin: 0 auto;
-}
-header .first_header .hamburger_box nav.globalMenuSp ul .news .information .infoItem {
-  margin: 0 16px 16px;
-  padding: 16px;
-  border-radius: 8px;
-  border: 2px dashed #7fbfff;
-  color: #4473a5;
-  -moz-text-align-last: left;
-       text-align-last: left;
-  background: #cfe1fb;
-}
-header .first_header .hamburger_box nav.globalMenuSp ul .news .information .infoItem a {
-  text-decoration: none;
-  color: #4473a5;
-}
-header .first_header .hamburger_box nav.globalMenuSp ul .news .information .infoItem .date {
-  font-size: 8px;
-}
-header .first_header .hamburger_box nav.globalMenuSp ul .news .information .infoItem .text {
-  font-size: 12px;
 }
 header .first_header .hamburger_box nav.globalMenuSp.active {
   transform: translateX(0%);
