--- a/css/main.scss
+++ b/css/main.scss
@@ -168,6 +168,69 @@ header {
             }
             .listItem {
               margin-top: 24px;
+              .worry {
+                margin-bottom: -64px;
+                img {
+                  width: 100vw;
+                }
+              }
+              .styleSearch {
+                display: flex;
+                width: 100%;
+                margin: 80px auto 0;
+                justify-content: center;
+                .searchItem {
+                  margin: 0 16px;
+                  text-align: center;
+                  .icon {
+                    display: block;
+                    font-size: 40px;
+                    a {
+                      width: 40px;
+                      height: 40px;
+                      color: #fff;
+                      background: #000;
+                      padding: 32px;
+                      margin-bottom: 16px;
+                      border-radius: 50%;
+                    }
+                  }
+                  .name {
+                    height: 40px;
+                    padding: 32px 0 0;
+                    font-family: "Hiragino Maru Gothic Pro";
+                    font-size: 12px;
+                    vertical-align: middle;
+                  }
+                }
+              }
+              .news {
+                margin: 56px auto;
+                .information {
+                  max-width: 480px;
+                  text-align: center;
+                  margin: 0 auto;
+                  .infoItem {
+                    margin: 0 16px 16px;
+                    padding: 16px;
+                    border-radius: 8px;
+                    border: 2px dashed #7fbfff;
+                    color: #4473a5;
+                    text-align-last: left;
+                    background: #cfe1fb;
+                    a {
+                      text-decoration: none;
+                      color: #4473a5;
+                    }
+                    .date {
+                      font-size: 8px;
+                    }
+                    .text {
+                      font-size: 12px;
+                    }
+                  }
+                }
+              }
             }
             .accordionMenu {
               .border {
@@ -201,63 +264,6 @@ header {
                 &:before {
                   color: #E4405F;
                   transform: rotate(45deg);
-                }
-              }
-            }
-            .styleSearch {
-              display: flex;
-              width: 100%;
-              margin: 80px auto 0;
-              justify-content: center;
-              .searchItem {
-                margin: 0 16px;
-                text-align: center;
-                .icon {
-                  display: block;
-                  font-size: 40px;
-                  a {
-                    width: 40px;
-                    height: 40px;
-                    color: #fff;
-                    background: #000;
-                    padding: 32px;
-                    margin-bottom: 16px;
-                    border-radius: 50%;
-                  }
-                }
-                .name {
-                  height: 40px;
-                  padding: 32px 0 0;
-                  font-family: "Hiragino Maru Gothic Pro";
-                  font-size: 12px;
-                  vertical-align: middle;
-                }
-              }
-            }
-            .news {
-              margin: 56px auto;
-              .information {
-                max-width: 480px;
-                text-align: center;
-                margin: 0 auto;
-                .infoItem {
-                  margin: 0 16px 16px;
-                  padding: 16px;
-                  border-radius: 8px;
-                  border: 2px dashed #7fbfff;
-                  color: #4473a5;
-                  text-align-last: left;
-                  background: #cfe1fb;
-                  a {
-                    text-decoration: none;
-                    color: #4473a5;
-                  }
-                  .date {
-                    font-size: 8px;
-                  }
-                  .text {
-                    font-size: 12px;
-                  }
                 }
               }
             }
