--- a/css/main.scss
+++ b/css/main.scss
@@ -584,6 +584,9 @@ body {
     .contentsItem {
       min-height: 240px;
     }
+    .ranking {
+      min-height: 600px;
+    }
     .newItem {
       background: #bd979f;
       .newItem_container {
