fix: 全体的な調整を行った
Message body

Message footer

--- a/css/main.css
+++ b/css/main.css
@@ -635,6 +635,9 @@ body .title p:nth-child(3) {
   border: 1px solid #000;
   border-radius: 16px;
 }
+body .contentLast {
+  padding: 600px 0 16px;
+}
 
 .search_bar {
   text-align: center;
