--- a/css/myPage.scss
+++ b/css/myPage.scss
@@ -106,6 +106,9 @@ body {
         vertical-align: middle;
         width: 48px;
         height: 48px;
+        &:hover {
+          color: #555;
+        }
       }
     }
   }
