--- a/css/contents.css
+++ b/css/contents.css
@@ -1,1 +1,18 @@
-/*# sourceMappingURL=contents.css.map */
+* {
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+footer {
+  margin-top: auto;
+}/*# sourceMappingURL=contents.css.map */
