--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   font-family: 
     "ヒラギノ角ゴ Pro W3",
     "Hiragino Kaku Gothic Pro",
@@ -300,7 +301,7 @@ header {
     width: 240px;
     background: #fff;
     border-radius: 48px;
-    padding: 16px 48px;
+    padding: 16px 32px;
     // height: 160px;
     top: 0;
     bottom: 0;
