--- a/css/main.scss
+++ b/css/main.scss
@@ -133,9 +133,68 @@ header {
           transition: all .9s;
           width: 100%;
           ul {
-            margin: 48px auto;
+            margin: 0 auto 48px;
             padding: 0;
             width: 100%;
+            .balloon3-right-btm {
+              position: relative;
+              top: 24px;
+              left: 280px;
+              width: 100px;
+              height: 100px;
+              line-height: 100px;
+              border-radius: 50%;
+              text-align: center;
+              color: #ffffff;
+              letter-spacing: 0.2em;
+              font-size: 12px;
+              padding: 0 4px;
+              background-color: #a58eff;
+              font-family: Chalkduster;
+              transform: rotate(8deg);
+              &:before {
+              content: '';
+              position: absolute;
+              display: block;
+              width: 0;
+              height: 0;
+              left: 2px;
+              bottom: 2px;
+              border-right: 20px solid #a58eff;
+              border-top: 10px solid transparent;
+              border-bottom: 10px solid transparent;
+              transform: rotate(-45deg);
+              }
+            }
+              
+            // .balloon3-right-btm {
+            //   position: relative;
+            //   display: inline-block;
+            //   margin: 1.5em 15px 1.5em 0;
+            //   padding: 0 8px;
+            //   width: 90px;
+            //   height: 90px;
+            //   line-height: 90px;
+            //   text-align: center;
+            //   color: #FFF;
+            //   font-size: 16px;
+            //   font-weight: bold;
+            //   background: #a58eff;
+            //   border-radius: 50%;
+            //   box-sizing: border-box;
+            //   &:before {
+            //     content: "";
+            //     position: absolute;
+            //     bottom: -8px;
+            //     right: -8px;
+            //     margin-top: -2px;
+            //     border: 15px solid transparent;
+            //     border-left: 15px solid #a58eff;
+            //     z-index: 0;
+            //     -webkit-transform: rotate(-45deg);
+            //     transform: rotate(-45deg);
+            //   }
+            // }
             li {
               max-width: 800px;
               list-style-type: none;
@@ -611,25 +670,33 @@ body {
         .describe {
           text-align: left;
           padding: 0 16px;
-          font-size: 14px;
+          font-size: 3vmin;
           line-height: 2;
           .name {
             font-weight: bold;
-            font-size: 18px;
+            // font-size: 4vmin;
           }
         }
       }
-      img {
-        width: 40%;
+      .border {
+        width: 80%;
+        border: 1px solid #000;
+        border-radius: 32px;
+        margin: 0 auto 32px;
       }
-      .sponsor {
-        padding: 0 0 32px;
-        img {
-          width: 60%;
-        }
+      img {
+        width: 30%;
       }
     }
   } 
+  .sponsor {
+    padding: 0 0 32px;
+    text-align: center;
+    img {
+      max-width: 320px;
+      width: 60%;
+    }
+  }
   .contents {
     margin: 0 auto;
     text-align: center;
