--- a/css/main.scss
+++ b/css/main.scss
@@ -139,7 +139,7 @@ header {
             .balloon3-right-btm {
               position: relative;
               top: 24px;
-              left: 280px;
+              left: 56%;
               width: 100px;
               height: 100px;
               line-height: 100px;
@@ -797,7 +797,7 @@ body {
 }
 
 footer {
-  margin-top: auto;
+  margin: auto;
   padding: 24px 0;
   height: fit-content;
   background: #000;
