--- a/css/main.scss
+++ b/css/main.scss
@@ -139,7 +139,7 @@ header {
             .balloon3-right-btm {
               position: relative;
               top: 24px;
-              left: 64vmin;
+              left: 56%;
               width: 100px;
               height: 100px;
               line-height: 100px;
