--- a/css/main.css
+++ b/css/main.css
@@ -792,7 +792,7 @@ body .contentLast {
 }
 
 footer {
-  margin: auto;
+  margin-top: auto;
   padding: 24px 0;
   height: -webkit-fit-content;
   height: -moz-fit-content;
