--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,9 @@
 * a {
   text-decoration: none;
 }
+* img {
+  width: auto;
+}
 
 header .first_header {
   display: flex;
@@ -366,9 +369,10 @@ body {
 body main .slideShow .wrapper {
   max-width: 100vw;
   overflow: hidden;
-  width: 100%;
   position: relative;
-  height: 600px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 body main .slideShow .wrapper .next,
 body main .slideShow .wrapper .prev {
@@ -430,18 +434,15 @@ body main .slideShow .wrapper .slider4 {
   transform: translateX(-300vw);
 }
 body main .slideShow .wrapper .content {
-  width: 100%;
-  max-width: 100vw;
-  height: 600px;
+  width: 100vw;
+  height: auto;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
 }
 body main .slideShow .wrapper .content img {
   width: 100vw;
-  height: 100%;
-  -o-object-fit: fill;
-     object-fit: fill;
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
 }
 body main .slideShow .wrapper .indicator {
   width: 100%;
@@ -469,6 +470,7 @@ body main .slideShow .wrapper #list1 {
 body main .search .search_header {
   position: relative;
   background: #eee;
+  width: auto;
 }
 body main .search .search_header ul {
   display: flex;
