--- a/css/main.scss
+++ b/css/main.scss
@@ -16,6 +16,9 @@
   a {
     text-decoration: none;
   }
+  img {
+    width: auto;
+  }
 }
 
 header {
@@ -376,9 +379,8 @@ body {
       .wrapper {
         max-width: 100vw;
         overflow: hidden;
-        width: 100%;
         position: relative;
-        height: 600px;
+        height: fit-content;
         .next,
         .prev {
           width: 40px;
@@ -430,16 +432,17 @@ body {
           transform: translateX(-300vw);
         }
         .content {
-          width: 100%;
-          max-width: 100vw;
-          height: 600px;
+          // width: 100%;
+          width: 100vw;
+          height: auto;
           display: flex;
-          justify-content: center;
-          align-items: center;
+          text-align: center;
+          // justify-content: center;
+          // align-items: center;
           img {
             width: 100vw;
-            height: 100%;
-            object-fit: fill;
+            // height: 100%;
+            object-fit: scale-down;
           }
         }
         .indicator {
@@ -471,6 +474,7 @@ body {
       .search_header {
         position: relative;
         background: #eee;
+        width: auto;
         ul {
           display: flex;
           justify-content: center;
